@@ -1,3 +1,8 @@
+2013-01-11	The InnoDB Team
+	* row/row0sel.c:
+	Fix Bug#16088883 KILLING A QUERY INSIDE INNODB CAUSES IT TO
+	EVENTUALLY CRASH WITH AN ASSERTION
+
 2012-12-18	The InnoDB Team
 
 	* include/univ.i:
